feat: cleaned http response methods, added swagger annotations and docs
