# docs/swagger.yaml
@@ -1,5 +1,14 @@
 basePath: /
 definitions:
+  dto.CreateUserRequest:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+      username:
+        type: string
+    type: object
   dto.UserResponse:
     properties:
       email:
@@ -19,11 +28,61 @@ info:
   title: Swagger Example API (net/http)
   version: "1.0"
 paths:
+  /users:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve a list of all users
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/dto.UserResponse'
+            type: array
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      summary: List all users
+      tags:
+      - users
+    post:
+      consumes:
+      - application/json
+      description: Create a new user account
+      parameters:
+      - description: User registration data
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CreateUserRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.UserResponse'
+        "400":
+          description: Invalid request
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      summary: Register a new user
+      tags:
+      - users
   /users/{id}:
     get:
       consumes:
       - application/json
-      description: Get a user by ID
+      description: Get a single user by their ID
       parameters:
       - description: User ID
         in: path
@@ -38,12 +97,10 @@ paths:
           schema:
             $ref: '#/definitions/dto.UserResponse'
         "404":
-          description: Not Found
+          description: User not found
           schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Get a user
+            type: string
+      summary: Get user by ID
       tags:
       - users
 swagger: "2.0"
